syntax = "proto3";

package accountdetail;

import "google/protobuf/any.proto";

// The request message containing the user's ID and branch code.
message AccountDetailRequest {
  string branch_code = 1;
  string customer_id = 2;
}

// The response message containing customer and account details
message AccountDetailResponse {
  string full_name = 1;
  string cif_creation_date = 2;
  string customer_number = 3;
  string date_of_birth = 4;
  string gender = 5;
  string email_id = 6;
  string mobile_number = 7;
  string address_line_1 = 8;
  string address_line_2 = 9;
  string address_line_3 = 10;
  string address_line_4 = 11;
  string country = 12;
  string branch = 13;
  repeated Account accounts = 14;
}

message Account {
    string CUSTACNO = 1;
    string BRANCH_CODE = 2;
    string CCY = 3;
    string ACCOUNT_TYPE = 4;
    string ACCLASSDESC = 5;
    string status = 6;
}

// The service definition.
service AccountDetailService {
  rpc QueryCustomerDetail (AccountDetailRequest) returns (AccountDetailResponse);
}
